syntax = "proto3";

package com.tra21.grpc;

option java_multiple_files = true;
option java_package = "com.tra21.grpc";

message CreateProfile {
    string first_name = 1;
    string last_name = 2;
    bytes image_file = 3;
}
message UpdateProfile {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    bytes image_file = 4;
}

message ProfileDto {
    int32  id = 1;
    string first_name = 2;
    string last_name = 3;
    string image_path = 4;
}
message PaginationReq {
    int32 page = 1;
    int32 size = 2;
}

message PaginationRes {
    int32 page = 1;
    int32 size = 2;
    int32 total_elements = 3;
    int32 total_pages = 4;
}

message ProfilePage {
    PaginationRes pagination_res = 1;
    repeated ProfileDto data = 2;
}

message ProfileId {
    int32 id = 1;
}

service ProfileService {
    rpc GetProfiles(PaginationReq) returns (ProfilePage){}
    rpc GetProfile(ProfileId) returns (ProfileDto){}
    rpc CreateProfileProof(stream CreateProfile) returns (ProfileDto) {}
    rpc UpdateProfileProof(stream UpdateProfile) returns (ProfileDto) {}
}